# Disrupt-Recovery

./: .env.example  Makefile  PROJECT_ARCHITECTURE.md  README.md  pyproject.toml
config/: __init__.py  logging_config.yaml  model_config.yaml  settings.py  thresholds.yaml
data/experiments/: benchmark_20260401_140351.json  dr_prototype_20260401_134921.json  dr_prototype_20260401_135502.json
data/processed/features/: all_features.npy  all_metadata.csv
docs/: methodology.md
notebooks/: 01_data_exploration.py  02_train_contrastive_encoder.py  Colab_Train_Contrastive_Encoder.ipynb
research/experiments/: experiment_log.md
research/paper/: main.tex
scripts/: run_dr_prototype.py
scripts/data_preparation/: build_vector_db.py  download_datasets.py
scripts/evaluation/: benchmark.py
src/: __init__.py
src/core/: __init__.py  fusion_layer.py  input_processor.py  output_formatter.py
src/dr_pipeline/: __init__.py  chunking.py  dr_detector.py  recovery.py  shuffling.py  similarity.py
src/explainability/: __init__.py  explanation_generator.py
src/faid_pipeline/: __init__.py  attribution.py  contrastive_encoder.py  faid_detector.py  feature_extraction.py  vector_db.py
src/llm_integration/: __init__.py  cache_manager.py  gemini_client.py
src/models/: __init__.py  encoder_network.py  model_utils.py
src/utils/: __init__.py  logger.py  metrics.py  text_utils.py  validators.py
tests/: conftest.py
tests/unit/: __init__.py  test_chunking.py  test_features.py  test_fusion.py  test_shuffling.py
